[package]
name = "rust_cognito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
aws-config = "0.51.0"
aws-sdk-cognitoidentityprovider = "0.21.0"
tokio = { version = "1", features = ["full"] }
rpassword = "7.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
